--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-<h1>Drawing machine</h1>
-<p>hit 's' to save image</p>
+  <h1>Butterflies are angels</h1>
+  <h3>Click and drag to draw a butterfly in the dark</h3>
+  <h3>hit 'd' to display buttrerfly</h3>
+  <h3>hit 's' to save butterfly</h3>
 
 
 </body>
