--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
   <h1>Butterflies are angels</h1>
   <h3>Click and drag to draw a butterfly in the dark</h3>
-  <h3>hit 'd' to display buttrerfly</h3>
-  <h3>hit 's' to save butterfly</h3>
+  <h3>Click 'd' to display butterfly</h3>
+  <h3>Click 'c' to clear canvas then click 'd' to start drawing again</h3>
+  <h3>Refresh page to have the grid appear again</h3>
+
+
 
 
 </body>
